# kob

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
clients/: README.md
clients/cpp/: CMakeLists.txt  client.cpp
clients/csharp/: ArrowDataClient.csproj  Program.cs
clients/excel/: office_script.ts  power_query.m  xlwings_client.py
docs/: BENCHMARKS.md  DESIGN.md  PERFORMANCE_REPORT.md  RESUME.md
notebooks/: kob_transports_demo.ipynb
presentation/: README.md  build_deck.py  kob.pptx
src/kob/: __init__.py  benchmark.py  catalog.py  client.py  contract.py  generate_data.py  server_flight.py  server_http.py  server_proto.py
src/kob/core/: __init__.py  catalog.py  engine.py
src/kob/demos/: __init__.py
src/kob/demos/arrow_http/: __init__.py  server.py
src/kob/demos/json/: __init__.py  server.py
src/kob/demos/protobuf/: __init__.py  server.py
src/kob/demos/protobuf/proto/: data_service_pb2.py  data_service_pb2_grpc.py
src/kob/proto/: data_service.proto
src/kob/server/: __init__.py  __main__.py  api.py  app.py  flight.py
src/kob/tools/: __init__.py  benchmark.py  client.py  generate_data.py
