[project]
name = "kob"
version = "0.4.0"
description = "kob — a tiny, self-discovering, read-only Parquet query server. Drop Parquet in a folder; serve it as Apache Arrow over Flight (fast) with a Swagger UI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

# Core server: tiny surface — DuckDB engine + Arrow Flight + a thin ASGI/Swagger layer. Nothing else.
dependencies = [
    "duckdb>=1.5.3",
    "pyarrow>=24.0.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# Sample-data generator (synthetic GeoRev / OptionMetrics fixtures).
gen = ["numpy>=2.0", "scipy>=1.13", "pandas>=2.2"]
# Reference Python client CLI.
client = ["requests>=2.32", "pandas>=2.2"]
# Benchmark harness + the gRPC/Protobuf comparison baseline.
bench = ["requests>=2.32", "grpcio>=1.66", "protobuf>=6.33,<7"]
# Demo notebook (Jupyter) — runs every transport end to end (notebooks/kob_transports_demo.ipynb).
demo = ["pandas>=2.2", "requests>=2.32", "grpcio>=1.66", "protobuf>=6.33,<7",
        "matplotlib>=3.8", "jupyterlab>=4.2", "ipykernel>=6.29"]
# Everything, for development.
all = ["numpy>=2.0", "scipy>=1.13", "pandas>=2.2", "requests>=2.32", "grpcio>=1.66", "protobuf>=6.33,<7"]

[project.scripts]
# The product — a core install is all you need (Arrow Flight + Swagger, together):
kob = "kob.server.app:main"                      # the server: Flight :8815 + Swagger :8000/docs
kob-flight = "kob.server.flight:main"            # Flight only, standalone (e.g. for benchmarking)
# Demo transports — secondary, here only to illustrate the wire-format alternatives:
kob-demo-arrow = "kob.demos.arrow_http.server:main"  # Arrow IPC over plain HTTP
kob-demo-json = "kob.demos.json.server:main"         # REST/JSON baseline
kob-demo-proto = "kob.demos.protobuf.server:main"    # [bench]  gRPC/Protobuf baseline
# Tooling (needs the matching extra):
kob-gen = "kob.tools.generate_data:main"         # [gen]    sample datasets
kob-client = "kob.tools.client:main"             # [client] reference client
kob-bench = "kob.tools.benchmark:main"           # [bench]  transport shoot-out

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kob"]

[tool.uv]
package = true
